--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
     <script defer src="main.js"></script>
 </head>
 <body>
-    <h1>Hello</h1>
-    <div id="images-block">
+    <div id="nav">
+
+
+    <input id="page-num" type="number" value="1"/>
+    <button id="btn-prev" type="button">prev</button>
+    <button id="btn-next" type="button">next</button>
+    <select id="limit-page">
+        <option>6</option>
+        <option>10</option>
+        <option>20</option>
+        <option>30</option>
+    </select>
+</div>
+    <div id="images-block" class="loading">
         
     </div>
 </body>
